logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:28:54.251539+00:00/task_id=create_dim_dates_table/attempt=1.log
[2022-08-28 23:28:58,635] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:28:54.251539+00:00 [queued]>
[2022-08-28 23:28:58,641] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:28:54.251539+00:00 [queued]>
[2022-08-28 23:28:58,642] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:28:58,642] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:28:58,642] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:28:58,651] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_dates_table> on 2022-08-28 23:28:54.251539+00:00
[2022-08-28 23:28:58,654] {standard_task_runner.py:52} INFO - Started process 2980 to run task
[2022-08-28 23:28:58,656] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_dates_table', 'manual__2022-08-28T23:28:54.251539+00:00', '--job-id', '110', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmprlvn9oim', '--error-file', '/tmp/tmp0q4se0je']
[2022-08-28 23:28:58,656] {standard_task_runner.py:80} INFO - Job 110: Subtask create_dim_dates_table
[2022-08-28 23:28:58,696] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:28:54.251539+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:28:58,743] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_dates_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:28:54.251539+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:28:54.251539+00:00
[2022-08-28 23:28:58,749] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:29:00,284] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_dates;

    CREATE TABLE IF NOT EXISTS dim_dates AS (
        WITH
        distinct_timestamps AS (
            SELECT
                ARRAY(
                    data_abertura,
                    data_despacho,
                    data_local_embarque,
                    data_inicio,
                    data_final
                ) AS timestamp_array
            FROM
                raw__taxigov_corridas
        )
        
        SELECT
            DISTINCT
                ts,
                DATE(ts) AS date,
                EXTRACT(MONTH FROM ts) AS month,
                EXTRACT(YEAR FROM ts) AS year,
                EXTRACT(DOW FROM ts) AS day_of_week,
                CASE
                    WHEN EXTRACT(DOW FROM ts) IN (1, 7) THEN TRUE
                    ELSE FALSE 
                END AS is_weekend
        FROM
            distinct_timestamps,
            distinct_timestamps.timestamp_array AS ts
    );, parameters: None
[2022-08-28 23:29:00,689] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates AS (
                                                 ^

[2022-08-28 23:29:00,695] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_dates_table, execution_date=20220828T232854, start_date=20220828T232858, end_date=20220828T232900
[2022-08-28 23:29:00,702] {standard_task_runner.py:97} ERROR - Failed to execute job 110 for task create_dim_dates_table (syntax error at or near "AS"
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates AS (
                                                 ^
; 2980)
[2022-08-28 23:29:00,714] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:29:00,736] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
